Whitespace Fix

--- a/assets/css/styles-index.css
+++ b/assets/css/styles-index.css
@@ -1,5 +1,12 @@
 /*Google Fonts*/
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap');
+html,body{
+  width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
 .gw-navbar{
     height: 65px;
     /*background-color: rgb(252, 223, 3);*/
